HKDevKorea Authorization System released(beta)!

--- a/config/comment.ini
+++ b/config/comment.ini
@@ -4,3 +4,32 @@ comment = 안녕하세요. 새로 오신 유저 여러분 환영합니다.
 
     HKDev Korea 서버는 매크로성 유저를 방지하기 위하여, 아래의 인증 절차를 진행하고 있습니다.
     아래의 버튼을 클릭하여 사용자 인증을 진행해주시기 바랍니다.
+
+[Authorization]
+title = 인증(Authorized)
+# warning_title = 인증(Authorized)
+# error_title = 인증(Authorized)
+
+# Format Keyword
+#   - guild: 서버명
+#   - guild_id: 서버 ID
+#   - verification_type: 서버 인증 유형 (이미지/음성)
+authorized_process = 해당 서버({guild})에 접근하기 위해서는 캡차 과정을 통과하셔야 합니다. 아래의 {verification_type}의 값을 알맞게 입력해주세요.
+# Format Keyword
+#   - guild: 서버명
+#   - guild_id: 서버 ID
+#   - time: 소요시간
+authorized_result_success = 인증에 성공하였습니다.
+# Format Keyword
+#   - guild: 서버명
+#   - guild_id: 서버 ID
+#   - time: 소요시간
+authorized_result_failed = 결과 다릅니다. `/인증`을 다시 시도해주시기 바랍니다.
+# Format Keyword
+#   - guild: 서버명
+#   - guild_id: 서버 ID
+#   - time: 소요시간
+#   - max_time: 최대대기 시간 (timeout)
+authorized_input_timeout = 인증 입력 시간({max_time}초)가 초과되어 인증에 실패하였습니다. 인증을 다시 시도해주시기 바랍니다.
+authorized_session_not_found = 인증 세션을 찾을 수 없습니다. 다시 시도해주세요 :(
+session_call = `/인증 <인증키>`를 활용하여, 인증키를 입력해주세요.
