add invite logger

--- a/config/comment.ini
+++ b/config/comment.ini
@@ -1,6 +1,6 @@
 [RegisterComment]
 comment = 안녕하세요. 새로 오신 유저 여러분 환영합니다.
-    아마도? 국내 최대 규모의 개발자 디스코드 서버, HKDev Korea 입니다.
+    국내 최대 규모의 개발자 디스코드 서버, HKDev Korea 입니다.
 
     HKDev Korea 서버는 매크로성 유저를 방지하기 위하여, 아래의 인증 절차를 진행하고 있습니다.
     아래의 버튼을 클릭하여 사용자 인증을 진행해주시기 바랍니다.
