update (change welcome_message comment, add excursion detection, change authorization modal)

--- a/config/comment.ini
+++ b/config/comment.ini
@@ -39,15 +39,19 @@ authorized_result_failed = 인증에 실패하여 유저 역할을 지급하지 
 authorized_input_timeout = 인증 입력 시간({max_time}초)가 초과되어 인증에 실패하였습니다. 인증을 다시 시도해주시기 바랍니다.
 authorized_session_not_found = 진행 중인 인증 세션을 찾을 수 없습니다.
     최상단의 🔓 버튼을 클릭해서 인증을 다시 진행해주세요.
+authorized_session_no_more_support = 더 이상 명령어를 통해 인증할 수 없습니다. `인증하기` 버튼을 눌러주세요.
+authorized_already_user = 이미 인증된 사용자 입니다. 다른 채널에 접근할 수 없는 경우 <@740123333777031233>를 통해 문의해주세요.
 
 session_call = `/인증 <인증키>`를 활용하여, 인증키를 입력해주세요.
-
+modal_title = 이미지 인증
+modal_label = 인증키
+modal_placeholder = 인증 키를 입력하세요.
 
 [WelcomeMessage]
 comment = 안녕하세요, {author_menthon}님! HKDev에 오신걸 환영합니다!
 
     ※ <#853172056136744990> 채널에서 약관을 확인해주시길 바랍니다!
-    ※ 질문 및 답변은 <#756115513578487888> 채널에서 역할을 먼저 받아주세요.
+    ※ <#988078876368449536>에서 구독자 인증을 해주세요.
 
     좋은 시간 보내시길 HKDev Korea가 기원합니다.
     <a:playwithme2:667750586938294292> 모두 새로 온 유저를 환영해주세요! <a:playwithme:667750787535077385>
